# tenant-tail

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  package-lock.json  package.json  spec-spine.toml
.claude/agents/: architect.md  explorer.md  implementer.md  reviewer.md
.claude/rules/: governed-artifact-reads.md  orchestrator-rules.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/ship/: SKILL.md
.derived/codebase-index/: index.json
.derived/codebase-index/by-package/: tenant-tail-cli.json  tenant-tail-core.json  tenant-tail-repo.json  tenant-tail-types.json  tenant-tail.json
.derived/codebase-index/by-spec/: 000-tenant-tail-bootstrap.json  001-certificate-verify-core.json  002-provenance-verify-core.json  003-distribution.json
.derived/spec-registry/: registry.json
.derived/spec-registry/by-spec/: 000-tenant-tail-bootstrap.json  001-certificate-verify-core.json  002-provenance-verify-core.json  003-distribution.json
.githooks/: enable-merge-driver.sh  merge-derived-index.sh
.github/workflows/: ai-pr-review.yml  ci.yml  deploy-docs.yml  determinism.yml  release.yml
crates/tenant-tail-cli/: Cargo.toml
crates/tenant-tail-cli/src/: main.rs
crates/tenant-tail-cli/tests/: cli.rs
crates/tenant-tail-core/: Cargo.toml
crates/tenant-tail-core/src/: certificate.rs  inter_stage_manifest.rs  lib.rs  platform_jws.rs
crates/tenant-tail-core/src/data/: agentic-sdk-watchlist.json  core-allowlist.txt
crates/tenant-tail-core/src/provenance/: allowlist.rs  citation.rs  corpus.rs  manifest.rs  mod.rs  validator.rs
crates/tenant-tail-core/tests/: certificate_parity.rs  provenance_parity.rs
crates/tenant-tail-core/tests/fixtures/cert-run/: governance-certificate.json
crates/tenant-tail-core/tests/fixtures/cert-run/s0-preflight/: preflight.txt
crates/tenant-tail-core/tests/fixtures/cert-run/s1-business-requirements/: brd.md
crates/tenant-tail-core/tests/fixtures/cert-run/s5-ui-specification/: build-spec.yaml
crates/tenant-tail-core/tests/fixtures/provenance-project/requirements/: business-requirements-document.md
crates/tenant-tail-types/: Cargo.toml
crates/tenant-tail-types/src/: budget.rs  knowledge.rs  lib.rs  provenance.rs
npm/: README.md  package.json
npm/lib/: platform.js
npm/scripts/: generate-platform-packages.js  smoke-test.sh
npm/test/: platform.test.js
py/: README.md  pyproject.toml
py/scripts/: generate_wheels.py  smoke_test.sh
py/src/tenant_tail/: __init__.py  _refuse.py  platform_map.py
py/test/: test_platform_map.py
specs/000-tenant-tail-bootstrap/: spec.md
specs/001-certificate-verify-core/: spec.md
specs/002-provenance-verify-core/: spec.md
specs/003-distribution/: spec.md
standards/spec/templates/: spec-template.md
website/: README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: architecture.md  concepts.md  ecosystem.md  getting-started.md  library-users.md  reference.md  release-distribution.md  verify-certificate.md  verify-provenance.md
website/src/pages/: index.module.css  index.tsx
