[package]
name = "tenant-tail-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tenant-tail: the verify engines (certificate verify, provenance verify)."

[dependencies]
tenant-tail-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
chrono.workspace = true
unicode-normalization.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[package.metadata.tenant-tail]
spec = "000-tenant-tail-bootstrap"
