[package]
name = "tenant-tail-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "tenant-tail: shared verify-surface DTOs (certificate + provenance carrier types)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true

[lints]
workspace = true

[package.metadata.tenant-tail]
spec = "000-tenant-tail-bootstrap"
